# Pipeline_USD_2025-2026_src

./: .gitignore  README.md  todo.md
asset_resolver/: cp_hou_to_maya.bat
asset_resolver/hou/UsdAssetResolver_v0.7.7/: USD Asset Resolver.md  launch.bat
asset_resolver/maya/UsdAssetResolver_v0.7.7/: launch.bat
houdini/asset_browser_window/: Bp_AssetBrowser.pypanel  Bp_Install.pypanel  asset_browser_window.py  asset_browser_window_houdini.py
houdini/nodes/: lop_Michel.LOOKDEV.1.5.hdalc  lop_Thomas.BP_Anim_Import.1.0.hdanc  lop_Thomas.BP_Export.1.0.hdanc  lop_Thomas.Bp_AssetReference.1.0.hdanc  lop_romsav_3D5.RenderLayer.1.0.hdanc  lop_romsav_3D5.RenderLayer.2.0.hdanc
houdini/nodes/scenes/: nodes_building_scene_02.hipnc  nodes_building_scene_ANIM_IMPORT_03.hipnc  nodes_building_scene_ASSET_REFERENCE_01.hipnc  nodes_building_scene_ASSET_REFERENCE_02.hipnc  nodes_building_scene_EXPORT_00.hipnc  nodes_building_scene_EXPORT_01.hipnc  nodes_building_scene_EXPORT_03.hipnc
houdini/nodes/scripts/: Bp_Export.py
installer/: build.bat
installer/resources/00_Pipeline/: bookmarks.json  links.json  pipeline.json
installer/src/: CMakeLists.txt  Debug.cpp  Debug.h  FileHelper.cpp  FileHelper.h  Installer.pro  Installer.pro.user.226c709  Installer.pro.user.859df54  Installer.pro.user.f759462  main.cpp
installer/src/rc/: rc.qrc
installer/src/src/: FileHelper.cpp  FileHelper.h  InstallProcess.cpp  InstallProcess.h  InstallProcessCreate.cpp  InstallProcessCreate.h  InstallProcessTools.cpp  InstallProcessTools.h  InstallStep.cpp  InstallStep.h  InstallSteps.cpp  InstallSteps.h  MainWizard.cpp  MainWizard.h  Page_000_Welcome.cpp  Page_000_Welcome.h  Page_010_SelectComponents.cpp  Page_010_SelectComponents.h  Page_011_SelectLocation.cpp  Page_011_SelectLocation.h  Page_012_Instalation.cpp  Page_012_Instalation.h  Page_013_Conclusion.cpp  Page_013_Conclusion.h  Page_020_NameAndLocation.cpp  Page_020_NameAndLocation.h  Page_021_Options.cpp  Page_021_Options.h  Page_022_Creation.cpp  Page_022_Creation.h  Page_023_Conclusion.cpp  Page_023_Conclusion.h  SoftwareHelpers.cpp  SoftwareHelpers.h  main.cpp
installer/src/ui/: Page_000_Welcome.ui  Page_010_SelectComponents.ui  Page_011_SelectLocation.ui  Page_012_Instalation.ui  Page_013_Conclusion.ui  Page_020_NameAndLocation.ui  Page_021_Options.ui  Page_022_Creation.ui  Page_023_Conclusion.ui
maya/scripts/: motion_path_rig.py
maya/scripts/SaveAs/: DlgAskAnimSettings.py  DlgAskCharacterName.py  DlgAskVariation.py  ExecuteDepartment.py  IconLoader.py  Refresh.py  SaveAs.py
maya/scripts/asset_browser_window/: Bp_AssetBrowser.pypanel  asset_browser_window_maya.py
maya/scripts/shot_manager/: shot_manager.py
maya/shelf/: shelf_Bp.mel
patch/PatchUpdateMaster/Scripts/: Prism_PatchUpdateMaster_Functions.py
prism/Badger_Pipeline/: Thomas_00.lnk
prism/Badger_Pipeline/Scripts/: Nomenclatures.md  Prism_Badger_Pipeline_Functions.py  Prism_Badger_Pipeline_Variables.py  Prism_Badger_Pipeline_init.py  Prism_Thomas_00_Functions.py  Prism_Thomas_00_Variables.py  Prism_Thomas_00_init.py  todo
prism/PatchUpdateMaster/Scripts/: Prism_PatchUpdateMaster_Functions.py  Prism_PatchUpdateMaster_Variables.py
prism/sync_media/Scripts/: Prism_sync_media_Functions.py  Prism_sync_media_Variables.py  Prism_sync_media_init.py
resources/: exemple_USD_usage.py
substance/: ExportTextureState.py  prism_init.py
substance/FixMasterRename/Scripts/: Prism_FixMasterRename_Functions.py  Prism_FixMasterRename_Variables.py  Prism_FixMasterRename_init.py
substance/SubstancePainter/Integration/: prism_init.py
substance/SubstancePainter/Scripts/: Prism_SubstancePainter_ExportTextureUI.py  Prism_SubstancePainter_ExportTexture_Controllers.py  Prism_SubstancePainter_Functions.py  Prism_SubstancePainter_Integration.py  Prism_SubstancePainter_Variables.py  Prism_SubstancePainter_externalAccess_Functions.py  Prism_SubstancePainter_init.py  Prism_SubstancePainter_init_unloaded.py
substance/SubstancePainter_tester/Integration/: prism_init.py
zbrush/: ToDo.txt
(+152 files in other folders)
